--- a/shopping-list/src/Components/Input/Input.scss
+++ b/shopping-list/src/Components/Input/Input.scss
@@ -36,3 +36,15 @@
   background-color: white;
   padding: 2px;
 }
+
+.show-password-button {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 0;
+}
