--- a/shopping-list/src/Components/Button/Button.scss
+++ b/shopping-list/src/Components/Button/Button.scss
@@ -14,4 +14,26 @@
   &:hover {
     background-color: #45a049;
   }
+
+  &.big {
+    padding: 20px 40px;
+    font-size: 20px;
+  }
+
+  &.normal {
+    padding: 15px 32px;
+    font-size: 16px;
+  }
+
+  &.small {
+    padding: 10px 20px;
+    font-size: 12px;
+  }
+
+  &.icon {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    font-size: 16px;
+  }
 }
