Added new components

--- a/shopping-list/src/App.scss
+++ b/shopping-list/src/App.scss
@@ -1,6 +1,7 @@
 html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  color: #474747;
 }
 
 dialog {
@@ -20,4 +21,7 @@ body,
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin: auto;
+  min-width: 300px;
+  max-width: 600px;
 }
