--- a/shopping-list/src/Components/ListsView/ListItem/ListItem.scss
+++ b/shopping-list/src/Components/ListsView/ListItem/ListItem.scss
@@ -19,7 +19,7 @@
       overflow: hidden;
     }
 
-    .delete-button {
+    .menu-button {
       width: 30px;
       height: 30px;
       padding: 4px;
