--- a/shopping-list/src/Components/ListsView/ListsView.scss
+++ b/shopping-list/src/Components/ListsView/ListsView.scss
@@ -7,10 +7,6 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    margin: auto;
-    min-width: 300px;
-    max-width: 600px;
-    width: 100%;
   }
 
   .lists-footer {
@@ -21,7 +17,7 @@
       border-radius: 30%;
       margin: 10px;
 
-      img {
+      svg {
         width: 100%;
         height: 100%;
       }
