--- a/shopping-list/src/Components/Button/Button.scss
+++ b/shopping-list/src/Components/Button/Button.scss
@@ -10,6 +10,12 @@
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px;
+  display: flex;
+  align-items: center;
+
+  .button-loader {
+    margin-left: 5px;
+  }
 
   &.big {
     padding: 20px 40px;
@@ -50,4 +56,14 @@
       background-color: #f1f1f1;
     }
   }
+
+  &.disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+  }
+}
+
+.styled-button:disabled {
+  cursor: not-allowed;
+  opacity: 0.6;
 }
