--- a/shopping-list/src/Components/Dialog/Dialog.scss
+++ b/shopping-list/src/Components/Dialog/Dialog.scss
@@ -8,7 +8,7 @@
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  min-width: 400px;
+  min-width: 350px;
   max-width: 90%;
   z-index: 1000;
 }
@@ -30,6 +30,12 @@
 .dialog-content {
   padding: 10px;
   margin: 6px 16px;
+}
+
+.dialog-error {
+  color: orange;
+  margin: 6px 16px;
+  padding: 10px;
 }
 
 .dialog-footer {
