--- a/shopping-list/src/Components/ListDetailsView/ListDetailsView.scss
+++ b/shopping-list/src/Components/ListDetailsView/ListDetailsView.scss
@@ -1,2 +1,25 @@
 .list-details-component {
+  position: relative;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+
+  .add-product-button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    float: right;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin: 10px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
