--- a/shopping-list/src/Components/AppHeader/AppHeader.scss
+++ b/shopping-list/src/Components/AppHeader/AppHeader.scss
@@ -55,3 +55,34 @@
     }
   }
 }
+
+.header-button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  transition:
+    color 0.3s,
+    transform 0.2s;
+
+  &:hover {
+    text-decoration: underline;
+    transform: scale(1.1);
+  }
+
+  &:active svg {
+    transform: scale(0.9);
+  }
+
+  &.active svg {
+    fill: #ffeb3b;
+  }
+
+  svg {
+    margin-right: 5px;
+  }
+}
