--- a/shopping-list/src/Components/ListDetailsView/ProductItem/ProductItem.scss
+++ b/shopping-list/src/Components/ListDetailsView/ProductItem/ProductItem.scss
@@ -6,6 +6,11 @@
   background-color: #f9f9f9;
   transition: background-color 0.3s;
 
+  .completion-checkbox {
+    width: 30px;
+    height: 30px;
+  }
+
   &:hover {
     background-color: #e0e0e0;
   }
