--- a/shopping-list/src/Components/Select/Select.scss
+++ b/shopping-list/src/Components/Select/Select.scss
@@ -12,7 +12,6 @@
   transition:
     border-color 0.3s,
     box-shadow 0.3s;
-  width: 100%;
 }
 
 .styled-select:focus {
@@ -36,4 +35,23 @@
   left: 13px;
   background-color: white;
   padding: 2px;
+}
+
+.options-container {
+  position: absolute;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
+  z-index: 1;
+  overflow-y: auto; /* Enable vertical scrolling */
+}
+
+.option {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.option:hover {
+  background-color: #f0f0f0;
 }
