--- a/shopping-list/src/Components/ListDetailsView/ProductDetailsModal/ProductDetailsModal.scss
+++ b/shopping-list/src/Components/ListDetailsView/ProductDetailsModal/ProductDetailsModal.scss
@@ -6,6 +6,10 @@
     margin-right: 5px;
   }
 
+  .category-select {
+    width: 46px;
+  }
+
   .row {
     display: flex;
     align-items: center;
