--- a/shopping-list/src/Components/Select/Select.scss
+++ b/shopping-list/src/Components/Select/Select.scss
@@ -8,7 +8,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   color: #333333;
-  padding: 15px 32px;
+  padding: 10px;
   transition:
     border-color 0.3s,
     box-shadow 0.3s;
