--- a/shopping-list/src/Components/ListDetailsView/ProductItem/ProductItem.scss
+++ b/shopping-list/src/Components/ListDetailsView/ProductItem/ProductItem.scss
@@ -27,6 +27,20 @@
       color: #888;
     }
 
+    .product-unit {
+      margin-left: 5px;
+      color: #888;
+      width: 30px;
+    }
+
+    .product-category {
+      margin-left: 5px;
+      max-height: 30px;
+      width: 20px;
+      display: flex;
+      align-self: center;
+    }
+
     .product-completion-checkbox {
       margin: 0;
     }
