--- a/shopping-list/src/Components/ListsView/ListItem/ListItem.scss
+++ b/shopping-list/src/Components/ListsView/ListItem/ListItem.scss
@@ -1,5 +1,6 @@
 .list-item {
   display: flex;
+  flex-direction: column;
   min-height: 100px;
   overflow: hidden;
   position: relative;
@@ -33,7 +34,6 @@
 
   .list-header {
     padding: 10px;
-    width: 100%;
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -56,6 +56,34 @@
         width: 100%;
         height: 100%;
       }
+    }
+  }
+
+  .list-content {
+    display: flex;
+    padding: 10px;
+    align-items: center;
+
+    .progress-bar {
+      flex: 1;
+    }
+
+    .products-count {
+      margin-left: 5px;
+      font-size: 1.2rem;
+    }
+  }
+
+  .progress-bar {
+    height: 10px;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    overflow: hidden;
+
+    .progress {
+      height: 100%;
+      background-color: #007bff;
+      transition: width 0.3s ease;
     }
   }
 }
