--- a/shopping-list/src/Components/ProductsBrowser/ProductsBrowser.scss
+++ b/shopping-list/src/Components/ProductsBrowser/ProductsBrowser.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 
   .products-browser-dialog {
     background: white;
