--- a/shopping-list/src/Components/Input/Input.scss
+++ b/shopping-list/src/Components/Input/Input.scss
@@ -1,6 +1,7 @@
 .input-container {
   position: relative;
   margin: 10px 0;
+  width: inherit;
 }
 
 .styled-input {
@@ -11,9 +12,12 @@
   transition:
     border-color 0.3s,
     box-shadow 0.3s;
+  width: 100%;
+  box-sizing: border-box;
 
   &:not([type="checkbox"]) {
     padding: 15px 32px;
+    height: 50px;
   }
 
   &[type="checkbox"] {
